--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -1,1 +1,24 @@
 {extend name="layout/default" /}
+{block name="content"}
+<body class="layui-layout-body">
+<div id="LAY_app">
+    <div class="layui-layout layui-layout-admin">
+        {include file="common/header" /}
+        {include file="common/menu" /}
+        {include file="common/tabs" /}
+
+        <!-- 主体内容 -->
+        <div class="layui-body" id="LAY_app_body">
+            <div class="layadmin-tabsbody-item layui-show">
+
+                <iframe src="home/console.html" frameborder="0" class="layadmin-iframe"></iframe>
+
+            </div>
+        </div>
+
+        <!-- 辅助元素，一般用于移动设备下遮罩 -->
+        <div class="layadmin-body-shade" layadmin-event="shade"></div>
+        <!--{include file="common/footer" /}-->
+    </div>
+</div>
+{/block}
