--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1371,3 +1371,6 @@ body .layui-layer-we .layui-layer-btn a {
 body .layui-layer-we .layui-layer-btn .layui-layer-btn1 {
     background: #2c3e50
 }
+.lay_top{
+    margin-top: 20px !important;
+}
