--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -101,7 +101,7 @@
                 var url = "{:url('admin/auth.rule/edit','',false)}/id/" + data.id;
                 layer.open({
                     type: 2,
-                    title: "查看",
+                    title: "编辑",
                     shadeClose: true,
                     shade: 0.3,
                     maxmin: true,
