--- a/application/admin/view/common/menu.html
+++ b/application/admin/view/common/menu.html
@@ -305,10 +305,10 @@
                         <a lay-href="{:url('admin/auth.rule/index')}">规则管理</a>
                     </dd>
                     <dd>
-                        <a lay-href="user/administrators/list.html">后台管理员</a>
+                        <a lay-href="user/administrators/list.html">账号管理</a>
                     </dd>
                     <dd>
-                        <a lay-href="user/administrators/role.html">角色管理</a>
+                        <a lay-href="{:url('admin/auth.group/index')}">角色管理</a>
                     </dd>
                 </dl>
             </li>
