--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -67,7 +67,7 @@
         table.on('tool(group)', function(obj){
             var data = obj.data;
              if(obj.event === 'edit') {
-                var url = "{:url('admin/auth.rule/edit','',false)}/id/" + data.id;
+                var url = "{:url('admin/auth.group/edit','',false)}/ids/" + data.id;
                 layer.open({
                     type: 2,
                     title: "编辑",
@@ -75,7 +75,7 @@
                     shade: 0.3,
                     maxmin: true,
                     moveOut: true,
-                    area: ["80%", "80%"],
+                    area: ["90%", "90%"],
                     content: url,
                     skin: 'layui-layer-we',
                     btn:['关闭'],
