--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -26,7 +26,9 @@
 
 <!--操作-->
 <script type="text/html" id="barDemo">
+    {{# if(d.rules != '*'){  }}
     <a class="layui-btn layui-btn-xs layui-btn-radius" lay-event="edit">编辑</a>
+    {{# }  }}
 </script>
 {/block}
 
@@ -47,6 +49,7 @@
 
         table.render({
             elem: '#group'
+            ,skin:'line'
             ,url:"{:url('Admin/auth.group/index')}"
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
