--- a/application/admin/view/auth/group/edit.html
+++ b/application/admin/view/auth/group/edit.html
@@ -17,10 +17,10 @@
                     <input type="text" name="name" lay-verify="name"  autocomplete="off" value="{$row['name']}" placeholder="规则名称" class="layui-input">
                 </div>
             </div>
-            <div class="layui-form-item" pane="">
-                <label class="layui-form-label">开关-开</label>
+            <div class="layui-form-item">
+                <label class="layui-form-label">状态</label>
                 <div class="layui-input-block">
-                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" title="开关">
+                    <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$row['status'] == 1? 'checked' : ''}>
                 </div>
             </div>
             <div class="layui-form-item">
@@ -31,12 +31,6 @@
                     <div id="LAY-auth-tree-index"></div>
                 </div>
 
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">状态</label>
-                <div class="layui-input-block">
-                    <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$row['status'] == 1? 'checked' : ''}>
-                </div>
             </div>
             <div class="layui-form-item">
                 <div class="layui-input-block">
@@ -69,22 +63,17 @@
             ,table = layui.table
             ,layer = layui.layer
             ,authtree = layui.authtree;
-        //监听指定开关
-        form.on('switch(switchTest)', function(data){
-            layer.msg('开关checked：'+ (this.checked ? 'true' : 'false'), {
-                offset: '6px'
-            });
-            layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
-        });
 
         //监听提交
         form.on('submit(formRule)', function(data){
-            var formData = JSON.stringify(data.field)
-//            layer.msg(formData);
+            var authids = authtree.getChecked('#LAY-auth-tree-index');
+            var formData = data.field;
+            var ids = "{$row['id']}";
+            formData['rules'] = authids.join(',');
             $.ajax({
-                "url":"{:url('admin/auth.rule/edit')}",
+                "url":"{:url('admin/auth.group/edit','',false)}/ids/" + ids,
                 "cache":false,
-                "data":data.field,
+                "data":formData,
                 "async":true,
                 "type":'post',
                 "success":function(data){
@@ -93,7 +82,6 @@
                     var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                     parent.layer.close(index); //再执行关闭
                     //执行重载
-                    table.reload();
                 },
                 "error":function (data) {
                     layer.msg(data.info);
