--- a/application/admin/view/auth/group/edit.html
+++ b/application/admin/view/auth/group/edit.html
@@ -32,10 +32,16 @@
                 </div>
 
             </div>
-            <div class="layui-form-item">
+            <!--<div class="layui-form-item">-->
+                <!--<div class="layui-input-block">-->
+                    <!--<button class="layui-btn" lay-submit="" lay-filter="formRule">立即提交</button>-->
+                    <!--<button type="reset" class="layui-btn layui-btn-primary">重置</button>-->
+                <!--</div>-->
+            <!--</div>-->
+            <div class="layui-form-item hidden layer-footer">
                 <div class="layui-input-block">
-                    <button class="layui-btn" lay-submit="" lay-filter="formRule">立即提交</button>
-                    <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                    <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn btn-success layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
+                    <button type="reset" class="layui-btn layui-btn-primary layui-btn-sm btn-embossed">{:__('Reset')}</button>
                 </div>
             </div>
         </form>
