--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1374,3 +1374,9 @@ body .layui-layer-we .layui-layer-btn .layui-layer-btn1 {
 .lay_top{
     margin-top: 20px !important;
 }
+.hidden {
+    display: none !important;
+}
+.layer-footer {
+    display: none;
+}
