--- a/application/admin/view/auth/group/edit.html
+++ b/application/admin/view/auth/group/edit.html
@@ -5,6 +5,7 @@
     <div class="layui-row layui-col-space30">
         <div class="layui-col-xs12">
         <form class="layui-form" action="" id="rule" lay-filter="rule">
+            <input type="hidden" name="ids"  value="{$row['id']}" class="layui-input">
             <div class="layui-form-item">
                 <label class="layui-form-label">父级</label>
                 <div class="layui-input-block">
