--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -40,18 +40,20 @@
     }).extend({
         index: 'lib/index' //主入口模块
         ,we: 'we',
-    }).use(['index','table','element','we'], function(){
+    }).use(['jquery','index','table','element','we'], function(){
         var admin = layui.admin
             ,element = layui.element
             ,$ = layui.$ //重点处
             ,table = layui.table
             ,layer = layui.layer
+            ,form = layui.form
             ,we = layui.we;
 
         table.render({
             elem: '#group'
             ,skin:'line'
             ,url:"{:url('Admin/auth.group/index')}"
+            ,id: 'testReload'
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
                 ,{field:'name', title: '角色名称', sort: true}
@@ -60,7 +62,6 @@
                 ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:200}
             ]]
         });
-
 
         //监听行工具事件
         table.on('tool(group)', function(obj){
@@ -83,6 +84,46 @@
             }
         });
 
+        form.on('submit(formRule)', function(data){
+            var frame = layer.getChildFrame('html');
+            frame.find("[type=submit]").removeClass('disabled');
+            var name = frame.find("input[name=name]").val();
+//            var authids = frame.find("input[name=authids[]]").val();
+            var layerfooter = frame.find(".layer-footer");
+            var formdata = frame.find("form").serializeArray();
+
+            var d = {};
+            var t = frame.find("form").serializeArray();
+            $.each(t, function () {
+                d[this.name] = this.value;
+            });
+
+            var ids = frame.find("input[name=ids]").val();
+            var url = "{:url('admin/auth.group/edit','',false)}/ids/" + ids;
+//            formdata.rules = authids.join(',');
+//            return console.log(formdata);
+            $.ajax({
+                "url":"{:url('admin/auth.group/edit','',false)}/ids/" + ids,
+                "cache":false,
+                "data":formdata,
+                "async":true,
+                "type":'post',
+                "success":function(data){
+                    layer.msg(data.info);
+                    layer.closeAll();
+                    table.reload('testReload', {});
+                    //当你在iframe页面关闭自身时
+//                    var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+//                    parent.layer.close(index); //再执行关闭
+                    //执行重载
+                },
+                "error":function (data) {
+                    layer.msg(data.info);
+                }
+            });
+            return false;
+
+        });
     });
 </script>
 </body>
