--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1380,3 +1380,18 @@ body .layui-layer-we .layui-layer-btn .layui-layer-btn1 {
 .layer-footer {
     display: none;
 }
+.footer {
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    line-height: 60px;
+    background-color: #ffffff;
+    z-index: 1;
+    text-align: center;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+.footer-form{
+    margin-top: 60px;
+}
